Appointments page. Need to fix Examine and Medical History buttons